--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "ru-Ru"
+locale                   : "ru"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "PROBIVBOT"
 title_separator          : "-"
